--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Nkuthalo Makonco</h1>
     <h2> Bachelor of Engineering Technology Electrical Engineering and Bachelor of Science Computing</h2>
     <p>Automation & Control Systems | Robotics | Industrial Technology</p>
-    <img src="/sources/01 photo.jpg" alt="Nkuthalo Makonco" />
+    <img src="https://nkuthalomakonco.github.io/TechNkuthaloMakonco/sources/01 photo.jpg" alt="Nkuthalo Makonco" />
   </header>
 
   <!-ABOUT -->
