--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>🏠 <strong>Location:</strong> East London, South Africa<br>
        💻 <strong>Focus:</strong> Automation Technology<br>
        🎯 <strong>Interests:</strong> New Technologies & Smart Systems</p>
-    <p><a href="/sources/02 cv.pdf" download>📄 Download Resume</a></p>
+    <p><a href="https://nkuthalomakonco.github.io/TechNkuthaloMakonco/sources/02 cv.pdf" download>📄 Download Resume</a></p>
   </section>
 
   <!-EDUCATION -->
