--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
   <!-CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:nkuthalomakonco@gmail.com">nkuthalomakonco@gmail.com</a></p>
+<p>📧 Email: <a href="mailto:nkuthalomakonco@gmail.com">nkuthalomakonco@gmail.com</a></p>
+    <p>📱 Cell: <a href="tel:+YOUR_PHONE_NUMBER">+0781467481</a></p>
     <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/nkuthalo-makonco-2b198016a/">linkedin.com/in/nkuthalo-makonco</a></p>
     <p>💻 GitHub: <a href="https://github.com/nkuthalomakonco">github.com/nkuthalomakonco</a></p>
-    <p>🐦 Twitter/X: <a href="https://x.com/NkuthaloMakonco">@NkuthaloMakonco</a></p>
+    <p>🐦 Twitter/X: <a href="https://x.com/NkuthaloMakonco">NkuthaloMakonco</a></p>
+    <p>▶️ YouTube: <a href="https://www.youtube.com/@nkuthalo_makonco93">nkuthalo_makonco93</a></p>
 
     <h3>Send a Message</h3>
     <form>
