--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <!-ABOUT -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm an Electrical Engineering and Computing graduate from East London, South Africa. Passionate about automation, robotics, and emerging technologies, I enjoy solving complex engineering problems and working with innovative industrial systems.</p>
-    <p>Currently working at <strong>First Battery</strong> in Woodbrook, East London, focusing on design, maintenance, and automation solutions in manufacturing environments.</p>
-    <p>🏠 <strong>Location:</strong> East London, South Africa<br>
+    <p>I'm an Electrical Engineering and Computing graduate. Passionate about automation, robotics, and emerging technologies, I enjoy solving complex engineering problems and working with innovative industrial systems.</p>
+    <p>Currently working at <strong>First Battery</strong>, East London, SA, focusing on design, maintenance, and automation solutions in manufacturing environments.</p>
+    <p>🏠 <strong>Location:</strong> East London, SA<br>
        💻 <strong>Focus:</strong> Automation Technology<br>
        🎯 <strong>Interests:</strong> New Technologies & Smart Systems</p>
     <p><a href="https://nkuthalomakonco.github.io/TechNkuthaloMakonco/sources/02 cv.pdf" download>📄 Download Resume</a></p>
@@ -146,9 +146,10 @@
 
   <!-CERTIFICATIONS -->
   <section id="certifications">
-    <h2>Certifications & Achievements</h2>
+    <h2>Certifications</h2>
     <ul>
-      <li>Electrical Engineering & Computing Graduate</li>
+      <li>Btech: Electrical Engineering</li>
+      <li>Bsc: Computing</li>
       <li>Automation Systems and Robotics Specialist</li>
     </ul>
   </section>
